tests/NormalTests/paczka1/fuzzy1/93617827.err
Error in line 11: D6s15vbTZ A284 30,0
Error in line 8: S463 S463 79,2
Error in line 17: XFa2i S463 6,6
Error in line 32: XiJR5em S751 64,7
Error in line 35: uKm S463 148,2
